samples/_failures_safe/1761153110_331d1d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ce26db23.c: In function ‘main’:
./samples/SAFE/__tmp_ce26db23.c:149:5: error: expected declaration or statement at end of input
  149 |     double total_magnitude = 0.0;
      |     ^~~~~~
